# spatulastic

./: .gitignore  CMakeLists.txt  README.md  TODO  cmakeconfig.h.in  demodata.txt  filecopy.cpp  filecopy.h  main.cpp
include/: RingBuffer.h  spatulastic.h  treeslinger.h
lib/filecopy/: CMakeLists.txt
lib/filecopy/include/: filecopy.h
lib/filecopy/lib/ringbuffer/: CMakeLists.txt
lib/filecopy/lib/ringbuffer/include/: ringbuffer.h
lib/filecopy/lib/ringbuffer/lib/audioutils/: CMakeLists.txt
lib/filecopy/lib/ringbuffer/lib/audioutils/include/: audioutils.h
lib/filecopy/lib/ringbuffer/lib/audioutils/lib/intaudio/: CMakeLists.txt
lib/filecopy/lib/ringbuffer/lib/audioutils/lib/intaudio/include/: intaudio.h
lib/filecopy/lib/ringbuffer/lib/audioutils/lib/intaudio/src/: intaudio.cpp
lib/filecopy/lib/ringbuffer/lib/audioutils/src/: audioutils.cpp
lib/filecopy/lib/ringbuffer/src/: ringbuffer.cpp
lib/filecopy/src/: filecopy.cpp
lib/gatherdir/: CMakeLists.txt
lib/gatherdir/include/: gatherdir.h
lib/gatherdir/src/: gatherdir.cpp
lib/hashlib2plus/: CMakeLists.txt
lib/hashlib2plus/trunk/: CMakeLists.txt
lib/hashlib2plus/trunk/src/: hl_md5wrapper.cpp
lib/int_audio/: CMakeLists.txt
lib/progressbar/: CMakeLists.txt  progressbar.h
lib/progressbar/include/: progressbar.h
lib/progressbar/src/: progressbar.cpp
lib/templateinstantiator/: CMakeLists.txt
lib/templateinstantiator/include/: templateinstantiator.h
lib/templateinstantiator/src/: templateinstantiator.cpp
lib/timer/: CMakeLists.txt
lib/timer/include/: timer.h
lib/timer/src/: timer.cpp
src/: RingBuffer.cpp  main.cpp  progressbar.cpp  treeslinger.cpp
